# alfred-emoji-search

./: CLAUDE.md  LICENSE.md  README.md  info.plist  justfile  main.py  pyproject.toml
.github/workflows/: build.yml  release.yml
