[project]
name = "alfred-emoji"
version = "2025.12.2"
description = "Alfred workflow for emoji lookup by shortcode and description"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alfred-workflow",
    "bumpver",
    "emoji",
    "pydantic",
    "ruff",
    "typer",
]

[tool.uv]
package = false

[tool.bumpver]
current_version = "2025.12.2"
version_pattern = "YYYY.0M.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"info.plist" = [
    "<string>{version}</string>",
]
